--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,45 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Net-SSH-Perl
-version:      1.30
-version_from: lib/Net/SSH/Perl.pm
-installdirs:  site
-requires:
-    Convert::PEM:                  0.05
-    Crypt::DH:                     0.01
-    Crypt::DSA:                    0.11
-    Crypt::IDEA:                   0
-    Digest::HMAC_MD5:              0
-    Digest::HMAC_SHA1:             0
-    Digest::MD5:                   0
-    Digest::SHA1:                  2.10
-    IO::Socket:                    0
-    Math::GMP:                     1.04
-    Math::Pari:                    2.001804
-    MIME::Base64:                  0
-    Scalar::Util:                  0
-    String::CRC32:                 1.2
+--- #YAML:1.0
+name                    : Net-SSH-Perl
+version                 : 1.31
+abstract                : Perl client interface to SSH
+author:              
+  - David Robins <dbrobins@cpan.org>
 
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+license                 : perl
+distribution_type       : module
+dynamic_config          : 1
+
+requires:     
+  Convert::PEM          : 0.05
+  Crypt::DH             : 0.01
+  Crypt::DSA            : 0.11
+  Crypt::IDEA           : 0
+  Digest::HMAC_MD5      : 0
+  Digest::HMAC_SHA1     : 0
+  Digest::MD5           : 0
+  Digest::SHA1          : 2.10
+  IO::Socket            : 0
+  Math::GMP             : 1.04
+  Math::Pari            : 2.001804
+  MIME::Base64          : 0
+  Scalar::Util          : 0
+  String::CRC32         : 1.2
+build_requires:
+  Test::More            : 0.61
+recommends:
+  Module::Signature     : 0.50
+  Digest::BubbleBabble  : 0
+  Crypt::RSA            : 0
+
+resources:
+  homepage              : http://search.cpan.org/dist/Net-SSH-Perl/
+  license               : http://dev.perl.org/licenses/
+  bugtracker            : http://rt.cpan.org/Public/Dist/Display.html?Name=Net-SSH-Perl
+  MailingList           : https://lists.sourceforge.net/lists/listinfo/ssh-sftp-perl-users
+  Repository            : http://sourceforge.net/projects/ssh-sftp-perl/
+
+meta-spec:
+  version               : 1.4
+  url                   : http://module-build.sourceforge.net/META-spec-v1.4.html
+
+generated_by            : emacs
