--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name                    : Net-SSH-Perl
-version                 : 1.33
+version                 : 1.34
 abstract                : Perl client interface to SSH
 author:              
   - David Robins <dbrobins@cpan.org>
@@ -11,6 +11,7 @@ dynamic_config          : 1
 
 requires:     
   Convert::PEM          : 0.05
+  Crypt::DES            : 0
   Crypt::DH             : 0.01
   Crypt::DSA            : 0.11
   Crypt::IDEA           : 0
@@ -30,6 +31,7 @@ recommends:
   Module::Signature     : 0.50
   Digest::BubbleBabble  : 0
   Crypt::RSA            : 0
+  Term::ReadKey         : 0
 
 resources:
   homepage              : http://search.cpan.org/dist/Net-SSH-Perl/
