--- a/META.yml
+++ b/META.yml
@@ -10,10 +10,13 @@ distribution_type       : module
 dynamic_config          : 1
 
 requires:     
+  BSD::arc4random       : 1.50
   Convert::PEM          : 0.05
+  Crypt::Curve25519     : 0.04
   Crypt::DES            : 0
   Crypt::DH             : 0.01
   Crypt::DSA            : 0.11
+  Crypt::Ed25519        : 1.0
   Crypt::IDEA           : 0
   Crypt::OpenSSL::AES   : 0.03
   Digest::HMAC_MD5      : 0
